--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,78 +834,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 'old * old'\n",
-    "x = lambda old: eval(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid decimal literal (369896908.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[59], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    2.add\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
-     ]
-    }
-   ],
-   "source": [
-    "2.add"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data11 = []\n",
-    "ops = [ # Hardcoded\n",
+    "example = [ # Hardcoded\n",
     "  lambda x: x*19,\n",
     "  lambda x: x+6,\n",
     "  lambda x: x*x,\n",
     "  lambda x: x+3\n",
     "]\n",
-    "# ops = [ # Hardcoded\n",
-    "#   lambda x: x*13,\n",
-    "#   lambda x: x+2,\n",
-    "#   lambda x: x+6,\n",
-    "#   lambda x: x*x,\n",
-    "#   lambda x: x+3,\n",
-    "#   lambda x: x*7,\n",
-    "#   lambda x: x+4,\n",
-    "#   lambda x: x+7\n",
-    "# ]\n",
+    "actual = [ # Hardcoded\n",
+    "  lambda x: x*13,\n",
+    "  lambda x: x+2,\n",
+    "  lambda x: x+6,\n",
+    "  lambda x: x*x,\n",
+    "  lambda x: x+3,\n",
+    "  lambda x: x*7,\n",
+    "  lambda x: x+4,\n",
+    "  lambda x: x+7\n",
+    "]\n",
     "\n",
-    "class Monkey:\n",
-    "  def __init__(self, items, op, n, a, b):\n",
-    "    self.items = items\n",
-    "    self.operation = op\n",
-    "    self.n = n\n",
-    "    self.a = a\n",
-    "    self.b = b\n",
-    "    self.count = 0\n",
+    "def parse11(data, ops):\n",
+    "  monkeys, divisor = [], 1\n",
     "\n",
-    "  def run(self, flag=False):\n",
-    "    t, f = data11[self.a], data11[self.b]\n",
-    "    for old in self.items:\n",
-    "      new = self.operation(old) // (1 if flag else 3)\n",
-    "      (f if new%self.n else t).items.append(new)\n",
-    "      self.count += 1\n",
-    "    self.items = []\n",
+    "  class Monkey:\n",
+    "    def __init__(self, items, op, n, a, b):\n",
+    "      self.items = items\n",
+    "      self.operation = op\n",
+    "      self.n = n\n",
+    "      self.a = a\n",
+    "      self.b = b\n",
+    "      self.count = 0\n",
     "\n",
-    "  def __repr__(self):\n",
-    "    return f'{self.count}, {self.items}'\n",
+    "    def run(self, flag=False):\n",
+    "      t, f = monkeys[self.a], monkeys[self.b]\n",
+    "      for old in self.items:\n",
+    "        new = (self.operation(old) // (1 if flag else 3)) % divisor\n",
+    "        (f if new%self.n else t).items.append(new)\n",
+    "        self.count += 1\n",
+    "      self.items = []\n",
     "\n",
-    "def parse11(data):\n",
-    "  monkey, monkeys = {}, []\n",
+    "    def __repr__(self):\n",
+    "      return f'{self.count}, {self.items}'\n",
+    "\n",
+    "  monkey = {}\n",
     "  for line in data:\n",
     "    if not line:\n",
     "      monkeys.append(Monkey(**monkey))\n",
@@ -914,7 +887,9 @@
     "    elif m:= re.match('Operation: new = old (.) (.+)', line):\n",
     "      monkey['op'] = ops[len(monkeys)]\n",
     "    elif m:= re.match('Test: divisible by (\\d+)', line):\n",
-    "      monkey['n'] = int(m[1])\n",
+    "      n = int(m[1])\n",
+    "      divisor *= n\n",
+    "      monkey['n'] = n\n",
     "    elif m:= re.match('If true: throw to monkey (\\d)', line):\n",
     "      monkey['a'] = int(m[1])\n",
     "    elif m:= re.match('If false: throw to monkey (\\d)', line):\n",
@@ -924,28 +899,27 @@
     "\n",
     "def calculate_activity(monkeys):\n",
     "  activity = sorted(monkeys, key=lambda x: x.count, reverse=True)\n",
-    "  # print(activity)\n",
     "  return activity[0].count * activity[1].count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10605"
+       "121450"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data11 = parse11(data(11))\n",
+    "data11 = parse11(data(11), actual)\n",
     "for i in range(20):\n",
     "  for monkey in data11:\n",
     "    monkey.run()\n",
@@ -954,122 +928,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n",
-      "100\n",
-      "225\n",
-      "400\n",
-      "624\n",
-      "899\n",
-      "1224\n",
-      "1596\n",
-      "2021\n",
-      "2496\n",
-      "3024\n",
-      "3717\n",
-      "4224\n",
-      "5180\n",
-      "5621\n",
-      "6885\n",
-      "7221\n",
-      "8645\n",
-      "9405\n",
-      "10605\n",
-      "11766\n",
-      "12650\n",
-      "14036\n",
-      "15000\n",
-      "16758\n",
-      "17810\n",
-      "19448\n",
-      "21300\n",
-      "22484\n",
-      "24633\n",
-      "25740\n",
-      "28036\n",
-      "29392\n",
-      "31486\n",
-      "33286\n",
-      "35512\n",
-      "37422\n",
-      "39382\n",
-      "41800\n",
-      "43870\n",
-      "46420\n",
-      "49042\n",
-      "51736\n",
-      "53572\n",
-      "56386\n",
-      "58302\n",
-      "62230\n",
-      "63736\n",
-      "67840\n",
-      "69412\n",
-      "73150\n",
-      "75330\n",
-      "79222\n",
-      "82636\n",
-      "84952\n",
-      "89082\n",
-      "90882\n",
-      "95770\n",
-      "97636\n",
-      "102060\n",
-      "105280\n",
-      "108550\n",
-      "113212\n",
-      "115920\n",
-      "121432\n",
-      "122830\n",
-      "128502\n",
-      "130662\n",
-      "136510\n",
-      "140230\n",
-      "144000\n",
-      "148590\n",
-      "151690\n",
-      "157192\n",
-      "161986\n",
-      "166852\n",
-      "170962\n",
-      "175122\n",
-      "179332\n",
-      "184450\n",
-      "188770\n",
-      "194456\n",
-      "198000\n",
-      "204279\n",
-      "207911\n",
-      "214344\n",
-      "218999\n",
-      "223704\n",
-      "229416\n",
-      "233264\n",
-      "241056\n",
-      "243522\n",
-      "250480\n",
-      "254500\n",
-      "260590\n",
-      "266752\n",
-      "271942\n",
-      "280350\n",
-      "282472\n",
-      "291040\n"
-     ]
+     "data": {
+      "text/plain": [
+       "28244037010"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data11 = parse11(data(11))\n",
-    "for i in range(100):\n",
+    "data11 = parse11(data(11), actual)\n",
+    "for i in range(10000):\n",
     "  for monkey in data11:\n",
-    "    monkey.run()\n",
-    "  print(calculate_activity(data11))"
+    "    monkey.run(True)\n",
+    "calculate_activity(data11)"
    ]
   }
  ],
