--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,26 @@
     "  lambda x: x+4,\n",
     "  lambda x: x+7\n",
     "]\n",
-    "\n",
+    "data11 = (data(11), actual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "121450"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def parse11(data, ops):\n",
     "  monkeys, divisor = [], 1\n",
     "\n",
@@ -887,9 +906,8 @@
     "    elif m:= re.match('Operation: new = old (.) (.+)', line):\n",
     "      monkey['op'] = ops[len(monkeys)]\n",
     "    elif m:= re.match('Test: divisible by (\\d+)', line):\n",
-    "      n = int(m[1])\n",
-    "      divisor *= n\n",
-    "      monkey['n'] = n\n",
+    "      monkey['n'] = int(m[1])\n",
+    "      divisor *= monkey['n']\n",
     "    elif m:= re.match('If true: throw to monkey (\\d)', line):\n",
     "      monkey['a'] = int(m[1])\n",
     "    elif m:= re.match('If false: throw to monkey (\\d)', line):\n",
@@ -897,38 +915,20 @@
     "  monkeys.append(Monkey(**monkey))\n",
     "  return monkeys\n",
     "\n",
-    "def calculate_activity(monkeys):\n",
+    "def day11(data, rounds, flag=False):\n",
+    "  monkeys = parse11(*data)\n",
+    "  for _ in range(rounds):\n",
+    "    for monkey in monkeys:\n",
+    "      monkey.run(flag)\n",
     "  activity = sorted(monkeys, key=lambda x: x.count, reverse=True)\n",
-    "  return activity[0].count * activity[1].count"
+    "  return activity[0].count * activity[1].count\n",
+    "\n",
+    "day11(data11, 20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "121450"
-      ]
-     },
-     "execution_count": 184,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data11 = parse11(data(11), actual)\n",
-    "for i in range(20):\n",
-    "  for monkey in data11:\n",
-    "    monkey.run()\n",
-    "calculate_activity(data11)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -937,18 +937,28 @@
        "28244037010"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data11 = parse11(data(11), actual)\n",
-    "for i in range(10000):\n",
-    "  for monkey in data11:\n",
-    "    monkey.run(True)\n",
-    "calculate_activity(data11)"
+    "day11(data11, 10000, True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
