--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,10 +955,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('z')-ord('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "339"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def remap12(c):\n",
+    "  return 0 if c == 'S' else (25 if c == 'E' else ord(c) - ord('a'))\n",
+    "\n",
+    "def parse12(data):\n",
+    "  start, end, result = 0, 0, []\n",
+    "  for i, line in enumerate(data):\n",
+    "    if 'S' in line:\n",
+    "      start = (line.find('S'), i)\n",
+    "    if 'E' in line:\n",
+    "      end = (line.find('E'), i)\n",
+    "    result.append([remap12(c) for c in line])\n",
+    "\n",
+    "  x_m, y_m = len(result[0]), len(result)\n",
+    "  def find_routes(current, i):\n",
+    "    x, y = current\n",
+    "    options = filter(lambda x: x[0] >= 0 and x[1] >= 0 and x[0] < x_m and x[1] < y_m, [(x, y+1), (x, y-1), (x+1, y), (x-1, y)])\n",
+    "    target = result[y][x] + 1\n",
+    "    return [(coord, i) for coord in filter(lambda x: result[x[1]][x[0]] <= target, options)]\n",
+    "\n",
+    "  return start, end, find_routes\n",
+    "\n",
+    "data12 = data(12)\n",
+    "start, end, find_routes = parse12(data12)\n",
+    "\n",
+    "def dijkstra(start, end, route_finder):\n",
+    "  visited, q = set(start), deque(route_finder(start, 1))\n",
+    "  while q:\n",
+    "    current, i = q.popleft()\n",
+    "    if current == end:\n",
+    "      return i\n",
+    "    for option, j in route_finder(current, i+1):\n",
+    "      if option not in visited:\n",
+    "        q.append((option, j))\n",
+    "      visited.add(option)\n",
+    "\n",
+    "dijkstra(start, end, find_routes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_starts(data):\n",
+    "  starts = []\n",
+    "  for y, line in enumerate(data):\n",
+    "    for x, c in enumerate(line):\n",
+    "      if c == 'a' or c == 'S':\n",
+    "        starts.append((x, y))\n",
+    "  return starts\n",
+    "\n",
+    "starts = find_starts(data12)\n",
+    "min([dijkstra(start, end, find_routes) for start in starts])"
+   ]
   }
  ],
  "metadata": {
