--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
        "339"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,22 +1024,23 @@
     "      if option not in visited:\n",
     "        q.append((option, j))\n",
     "      visited.add(option)\n",
+    "  return np.Inf\n",
     "\n",
     "dijkstra(start, end, find_routes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "29"
+       "332"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
