--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -955,27 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ord('z')-ord('a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +964,7 @@
        "339"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,32 +986,33 @@
     "  def find_routes(current, i):\n",
     "    x, y = current\n",
     "    options = filter(lambda x: x[0] >= 0 and x[1] >= 0 and x[0] < x_m and x[1] < y_m, [(x, y+1), (x, y-1), (x+1, y), (x-1, y)])\n",
-    "    target = result[y][x] + 1\n",
-    "    return [(coord, i) for coord in filter(lambda x: result[x[1]][x[0]] <= target, options)]\n",
+    "    target = result[y][x] -1\n",
+    "    return [(coord, i+1) for coord in filter(lambda x: result[x[1]][x[0]] >= target, options)]\n",
     "\n",
     "  return start, end, find_routes\n",
     "\n",
     "data12 = data(12)\n",
     "start, end, find_routes = parse12(data12)\n",
     "\n",
-    "def dijkstra(start, end, route_finder):\n",
-    "  visited, q = set(start), deque(route_finder(start, 1))\n",
+    "def dijkstra(start, end, route_finder, cache={}):\n",
+    "  visited, q = set(start), deque(route_finder(start, 0))\n",
     "  while q:\n",
     "    current, i = q.popleft()\n",
     "    if current == end:\n",
     "      return i\n",
-    "    for option, j in route_finder(current, i+1):\n",
+    "    for option, j in route_finder(current, i):\n",
     "      if option not in visited:\n",
     "        q.append((option, j))\n",
+    "        cache[option] = j\n",
     "      visited.add(option)\n",
     "  return np.Inf\n",
     "\n",
-    "dijkstra(start, end, find_routes)"
+    "dijkstra(end, start, find_routes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1021,7 @@
        "332"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,11 +1033,30 @@
     "    for x, c in enumerate(line):\n",
     "      if c == 'a' or c == 'S':\n",
     "        starts.append((x, y))\n",
-    "  return starts\n",
+    "  return sorted(starts, key=lambda x: abs(x[0]-end[0]) + abs(x[1]-end[1]), reverse=True)\n",
     "\n",
+    "cache = {}\n",
     "starts = find_starts(data12)\n",
-    "min([dijkstra(start, end, find_routes) for start in starts])"
+    "for start in starts:\n",
+    "  result = dijkstra(end, start, find_routes, cache)\n",
+    "  if result == np.Inf:\n",
+    "    break\n",
+    "min([cache.get(start, np.Inf) for start in starts])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
