--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1053,10 +1053,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse13(data):\n",
+    "  current, pairs = None, []\n",
+    "  for line in data:\n",
+    "    if not line:\n",
+    "      continue\n",
+    "    if not isinstance(current, list):\n",
+    "      current = eval(line)\n",
+    "    else:\n",
+    "      pairs.append((current, eval(line)))\n",
+    "      current = None\n",
+    "  return pairs\n",
+    "\n",
+    "data13 = parse13(data(13))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5366"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compare_int(a, b):\n",
+    "  if a == b:\n",
+    "    return None\n",
+    "  return a < b\n",
+    "\n",
+    "def make_list(item):\n",
+    "  if isinstance(item, list):\n",
+    "    return item\n",
+    "  return [item]\n",
+    "\n",
+    "def compare_list(a, b):\n",
+    "  l = min(len(a), len(b))\n",
+    "  for i in range(l):\n",
+    "    result = compare(a[i], b[i])\n",
+    "    if isinstance(result, bool):\n",
+    "      return result\n",
+    "  if len(a) == len(b):\n",
+    "    return\n",
+    "  return len(a) < len(b)\n",
+    "\n",
+    "def compare(a, b):\n",
+    "  if isinstance(a, list) or isinstance(b, list):\n",
+    "    return compare_list(make_list(a), make_list(b))\n",
+    "  return compare_int(a, b)\n",
+    "\n",
+    "def day13(data):\n",
+    "  sum = 0\n",
+    "  for i, pair in enumerate(data):\n",
+    "    # print(i+1, pair, compare(*pair))\n",
+    "    if compare(*pair):\n",
+    "      sum += i+1\n",
+    "  return sum\n",
+    "\n",
+    "day13(data13)"
+   ]
   }
  ],
  "metadata": {
