--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Imports\n",
     "from collections import defaultdict, Counter, deque\n",
-    "from functools import lru_cache, reduce\n",
+    "from functools import lru_cache, reduce, cmp_to_key\n",
     "import itertools\n",
     "import json\n",
     "import numpy as np\n",
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,9 +1063,9 @@
     "    if not line:\n",
     "      continue\n",
     "    if not isinstance(current, list):\n",
-    "      current = eval(line)\n",
+    "      current = json.loads(line)\n",
     "    else:\n",
-    "      pairs.append((current, eval(line)))\n",
+    "      pairs.append((current, json.loads(line)))\n",
     "      current = None\n",
     "  return pairs\n",
     "\n",
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
        "5366"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,8 +1091,8 @@
    "source": [
     "def compare_int(a, b):\n",
     "  if a == b:\n",
-    "    return None\n",
-    "  return a < b\n",
+    "    return 0\n",
+    "  return -1 if a < b else 1\n",
     "\n",
     "def make_list(item):\n",
     "  if isinstance(item, list):\n",
@@ -1102,12 +1102,11 @@
     "def compare_list(a, b):\n",
     "  l = min(len(a), len(b))\n",
     "  for i in range(l):\n",
-    "    result = compare(a[i], b[i])\n",
-    "    if isinstance(result, bool):\n",
+    "    if result := compare(a[i], b[i]):\n",
     "      return result\n",
     "  if len(a) == len(b):\n",
-    "    return\n",
-    "  return len(a) < len(b)\n",
+    "    return 0\n",
+    "  return -1 if len(a) < len(b) else 1\n",
     "\n",
     "def compare(a, b):\n",
     "  if isinstance(a, list) or isinstance(b, list):\n",
@@ -1117,13 +1116,53 @@
     "def day13(data):\n",
     "  sum = 0\n",
     "  for i, pair in enumerate(data):\n",
-    "    # print(i+1, pair, compare(*pair))\n",
-    "    if compare(*pair):\n",
+    "    if compare(*pair) == -1:\n",
     "      sum += i+1\n",
     "  return sum\n",
     "\n",
     "day13(data13)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23391"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day13_2(data):\n",
+    "  dividers = ([[2]], [[6]])\n",
+    "  data = reduce(lambda x, y: x+list(y), data13 + [dividers], [])\n",
+    "  result = sorted(data, key=cmp_to_key(compare))\n",
+    "  indices = [result.index(x)+1 for x in dividers]\n",
+    "  return indices[0]*indices[1]\n",
+    "\n",
+    "day13_2(data13)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
