--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -341,15 +341,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RFFFWBPNS\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'RFFFWBPNS'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -382,20 +385,23 @@
     "    make_move(positions, int(result[1]), int(result[2])-1, int(result[3])-1)\n",
     "  return read_top(positions)\n",
     "\n",
-    "print(day5(make_move))"
+    "day5(make_move)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CQQBBJFCS\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'CQQBBJFCS'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -405,7 +411,7 @@
     "    stack.appendleft(positions[start].popleft())\n",
     "  positions[end].extendleft(stack)\n",
     "\n",
-    "print(day5(make_move_9001))"
+    "day5(make_move_9001)"
    ]
   },
   {
@@ -417,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,16 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1262"
+       "(1262, 3444)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,27 +452,7 @@
     "    if len(set(data6[i:i+n])) == n:\n",
     "      return i + n\n",
     "\n",
-    "day6(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3444"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "day6(14)"
+    "day6(4), day6(14)"
    ]
   },
   {
@@ -838,13 +824,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example = [ # Hardcoded\n",
+    "# Hardcoded\n",
+    "example = [\n",
     "  lambda x: x*19,\n",
     "  lambda x: x+6,\n",
     "  lambda x: x*x,\n",
     "  lambda x: x+3\n",
     "]\n",
-    "actual = [ # Hardcoded\n",
+    "actual = [ \n",
     "  lambda x: x*13,\n",
     "  lambda x: x+2,\n",
     "  lambda x: x+6,\n",
@@ -1053,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1070,7 @@
        "5366"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,8 +1087,7 @@
     "  return [item]\n",
     "\n",
     "def compare_list(a, b):\n",
-    "  l = min(len(a), len(b))\n",
-    "  for i in range(l):\n",
+    "  for i in range(min(len(a), len(b))):\n",
     "    if result := compare(a[i], b[i]):\n",
     "      return result\n",
     "  if len(a) == len(b):\n",
