--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1145,10 +1145,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse14(data):\n",
+    "  results, bottom = set(), 0\n",
+    "  for line in data:\n",
+    "    coordinates = [[int(x) for x in coord.split(',')] for coord in line.split(' -> ')]\n",
+    "    x1, y1 = coordinates[0]\n",
+    "    for (x2, y2) in coordinates[1:]:\n",
+    "      for i in range(min(x1, x2), max(x1,x2)+1):\n",
+    "        for j in range(min(y1, y2), max(y1,y2)+1):\n",
+    "          results.add((i, j))\n",
+    "      bottom = max(bottom, j)\n",
+    "      x1, y1 = x2, y2\n",
+    "  return results, bottom\n",
+    "  \n",
+    "data14 = data(14)\n",
+    "sand, bottom = parse14(data14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day14(sand, bottom):  \n",
+    "  start, initial = (500, 0), len(sand)\n",
+    "  while start not in sand:\n",
+    "    x, y = start\n",
+    "    while (x, y) not in sand:\n",
+    "      if y+1 > bottom:\n",
+    "        return len(sand) - initial\n",
+    "      for candidate in ((x, y+1), (x-1, y+1), (x+1, y+1), None):\n",
+    "        if candidate and candidate not in sand:\n",
+    "          x, y = candidate\n",
+    "          break\n",
+    "      if not candidate:\n",
+    "        sand.add((x, y))\n",
+    "\n",
+    "day14(sand.copy(), bottom)"
+   ]
   }
  ],
  "metadata": {
