--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,16 +1168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "1061"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,6 +1198,42 @@
     "        sand.add((x, y))\n",
     "\n",
     "day14(sand.copy(), bottom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25055"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day14_2(sand, bottom):  \n",
+    "  start, initial = (500, 0), len(sand)\n",
+    "  while start not in sand:\n",
+    "    x, y = start\n",
+    "    while (x, y) not in sand:\n",
+    "      for candidate in ((x, y+1), (x-1, y+1), (x+1, y+1), None):\n",
+    "        if not candidate or candidate[1] > bottom+1:\n",
+    "          candidate = None\n",
+    "          break\n",
+    "        if candidate not in sand:\n",
+    "          x, y = candidate\n",
+    "          break\n",
+    "      if not candidate:\n",
+    "        sand.add((x, y))\n",
+    "  return len(sand) - initial\n",
+    "\n",
+    "day14_2(sand.copy(), bottom)"
    ]
   }
  ],
