--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
        "5366"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
        "23391"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,79 +1162,58 @@
     "      x1, y1 = x2, y2\n",
     "  return results, bottom\n",
     "  \n",
-    "data14 = data(14)\n",
-    "sand, bottom = parse14(data14)"
+    "data14 = parse14(data(14))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1061"
+       "(1061, 25055)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def day14(sand, bottom):  \n",
-    "  start, initial = (500, 0), len(sand)\n",
+    "def day14(sand, bottom, flag=False):  \n",
+    "  sand, start, initial, path = sand.copy(), (500, 0), len(sand), deque()\n",
     "  while start not in sand:\n",
-    "    x, y = start\n",
+    "    x, y = path.pop() if path else start\n",
     "    while (x, y) not in sand:\n",
-    "      if y+1 > bottom:\n",
-    "        return len(sand) - initial\n",
-    "      for candidate in ((x, y+1), (x-1, y+1), (x+1, y+1), None):\n",
-    "        if candidate and candidate not in sand:\n",
-    "          x, y = candidate\n",
-    "          break\n",
-    "      if not candidate:\n",
-    "        sand.add((x, y))\n",
-    "\n",
-    "day14(sand.copy(), bottom)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25055"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day14_2(sand, bottom):  \n",
-    "  start, initial = (500, 0), len(sand)\n",
-    "  while start not in sand:\n",
-    "    x, y = start\n",
-    "    while (x, y) not in sand:\n",
-    "      for candidate in ((x, y+1), (x-1, y+1), (x+1, y+1), None):\n",
-    "        if not candidate or candidate[1] > bottom+1:\n",
-    "          candidate = None\n",
-    "          break\n",
+    "      for candidate in ((x, y+1), (x-1, y+1), (x+1, y+1)):\n",
     "        if candidate not in sand:\n",
+    "          path.append(candidate)\n",
     "          x, y = candidate\n",
     "          break\n",
-    "      if not candidate:\n",
+    "      if candidate in sand or candidate[1] > bottom:\n",
     "        sand.add((x, y))\n",
-    "  return len(sand) - initial\n",
+    "    if not flag and candidate[1] > bottom:\n",
+    "      break\n",
+    "  return len(sand) - initial - (1 if not flag else 0)\n",
     "\n",
-    "day14_2(sand.copy(), bottom)"
+    "day14(*data14), day14(*data14, True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
